.provarCaches/00D410000011HE0EAM/objects/rstk__forusage__c.object
<CustomObject>
    <description>forusage__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__forusage_div__r.rstk__sydiv_div__c +  rstk__forusage_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c + TEXT( rstk__forusage_month__r.rstk__fcstcal_year__c ) + TEXT( rstk__forusage_month__r.rstk__fcstcal_month__c )</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__forusage_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c + &apos;(&apos; +  Text(rstk__forusage_month__r.rstk__fcstcal_year__c) + &apos;-&apos; +  Text(rstk__forusage_month__r.rstk__fcstcal_month__c) + &apos;)&apos;</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__forusage_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Forecast Analysis with Usage</relationshipLabel>
        <relationshipName>forusages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__forusage_forqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__forusage_forseq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Process Sequence</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__forusage_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Forecast Analysis with Usage</relationshipLabel>
        <relationshipName>forusages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__forusage_month__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Month</label>
        <referenceTo>rstk__fcstcal__c</referenceTo>
        <relationshipLabel>Forecast Analysis with Usage</relationshipLabel>
        <relationshipName>forusages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Forecast Analysis with Usage</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Analysis with Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>